--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.40",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "mll-lab/laravel-graphql-playground": "^2.5",
+        "nuwave/lighthouse": "^5.22"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
