--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
         "graphql:similar": "graphql similar"
     },
     "devDependencies": {
+        "@graphql-cli/codegen": "2.1.1",
+        "@graphql-cli/coverage": "2.1.0",
+        "@graphql-cli/diff": "2.1.0",
+        "@graphql-cli/similar": "2.1.0",
+        "@graphql-cli/validate": "2.1.0",
         "@tailwindcss/forms": "^0.2.1",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.1.0",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
+        "graphql-cli": "4.1.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.2",
-        "graphql-cli": "4.1.0",
-        "@graphql-cli/codegen": "2.1.1",
-        "@graphql-cli/coverage": "2.1.0",
-        "@graphql-cli/validate": "2.1.0",
-        "@graphql-cli/diff": "2.1.0",
-        "@graphql-cli/similar": "2.1.0"
+        "tailwindcss": "^2.0.2"
     },
     "dependencies": {
         "toastr": "^2.1.4"
