--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -17,8 +18,8 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "mll-lab/laravel-graphql-playground": "^2.5",
-        "nuwave/lighthouse": "^5.22",
-      "ext-json": "*"
+        "nnjeim/world": "^1.0",
+        "nuwave/lighthouse": "^5.22"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
