--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "mll-lab/laravel-graphql-playground": "^2.5",
-        "nuwave/lighthouse": "^5.22"
+        "mll-lab/laravel-graphql-playground": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
