--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.6",
-        "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^8.40",
-        "laravel/tinker": "^2.5",
-        "mll-lab/laravel-graphql-playground": "^2.5"
+        "laravel/tinker": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
