--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "intervention/image": "^2.6",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "stripe/stripe-php": "^7.103"
+        "stripe/stripe-php": "^7.103",
+        "symfony/mailer": "^5.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
