--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "cartalyst/stripe-laravel": "^13.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
