--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-json": "*",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "cartalyst/stripe-laravel": "^13.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -17,7 +18,6 @@
         "intervention/image": "^2.6",
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
-        "laraveldaily/laravel-invoices": "2.0",
         "stripe/stripe-php": "^7.103",
         "symfony/mailer": "^5.4"
     },
